examples/syntaxErrors/errorParsingCopatternConstructor.lcp
A = ()

main : A -> A
main x = ()
main main = ()
Succ main = ()
